{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 50,
  "lineage": "95a34d86-acf9-c84e-f374-996591958c0a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "google_compute_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.118.186.209",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-23T11:35:36.844-07:00",
            "id": "projects/ci-lab-412213/regions/northamerica-northeast1/addresses/nat-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "nat-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ci-lab-412213",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/regions/northamerica-northeast1/addresses/nat-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-23T11:36:29.401-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ci-lab-412213/global/firewalls/allow-5000",
            "log_config": [],
            "name": "allow-5000",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc",
            "priority": 1000,
            "project": "ci-lab-412213",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/firewalls/allow-5000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-03-23T11:36:29.373-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ci-lab-412213/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc",
            "priority": 1000,
            "project": "ci-lab-412213",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-109-17800-147-38",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/zones/northamerica-northeast1-a/disks/flask-app-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ci-lab-412213/zones/northamerica-northeast1-a/instances/flask-app-instance",
            "instance_id": "8712359176171593666",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "gce-container-declaration": "spec:\n  containers:\n    - name: flask-app\n      image: northamerica-northeast1-docker.pkg.dev/ci-lab-412213/flask-app/flask-img:latest\n      env:\n        - name: PORT\n          value: \"5000\"\n      ports:\n        - containerPort: 5000\n  restartPolicy: Always\n"
            },
            "metadata_fingerprint": "ZPeK67-iIJs=",
            "metadata_startup_script": "echo hi \u003e /test.txt",
            "name": "flask-app-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.6.158",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc",
                "network_ip": "10.162.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/regions/northamerica-northeast1/subnetworks/stephen-vpc",
                "subnetwork_project": "ci-lab-412213"
              }
            ],
            "project": "ci-lab-412213",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/zones/northamerica-northeast1-a/instances/flask-app-instance",
            "service_account": [
              {
                "email": "975115855817-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "flask-app"
            ],
            "tags_fingerprint": "fA29wp4-1So=",
            "zone": "northamerica-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ci-lab-412213/global/networks/stephen-vpc",
            "mtu": 0,
            "name": "stephen-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "9189869074590637591",
            "project": "ci-lab-412213",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-23T11:36:29.648-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ci-lab-412213/regions/northamerica-northeast1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc",
            "project": "ci-lab-412213",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/regions/northamerica-northeast1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "ci-lab-412213/northamerica-northeast1/nat-router/nat-gateway",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/regions/northamerica-northeast1/addresses/nat-ip"
            ],
            "project": "ci-lab-412213",
            "region": "northamerica-northeast1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.google_compute_address",
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-23T11:36:30.134-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/ci-lab-412213/regions/northamerica-northeast1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ci-lab-412213",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/regions/northamerica-northeast1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-23T11:36:30.444-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/ci-lab-412213/regions/northamerica-northeast1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/global/networks/stephen-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ci-lab-412213",
            "purpose": "PRIVATE",
            "region": "northamerica-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ci-lab-412213/regions/northamerica-northeast1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}